--- a/index-bootstrap.html
+++ b/index-bootstrap.html
@@ -1,10 +1,18 @@
 <html>
+<h1>Huang Song's Style Guide</h1>
 <head>
 	<title> SH Style Guide  </title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link type="text/css" rel="stylesheet" 
+		href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+	<link type="text/css" rel="stylesheet"
+		href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
+	<script type="text/javascript"
+   		src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
 </head>
 
 <body>
-	<h1>Huang Song's Style Guide</h1>
+
 
 	<p>
 	<em class=hot><h3>This is for CS184 Homework 3.</h3></em><br>
