--- a/index-bootstrap.html
+++ b/index-bootstrap.html
@@ -4,11 +4,11 @@
 	<title> SH Style Guide  </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link type="text/css" rel="stylesheet" 
-		href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+		href="./bootstrap/twitter-bootstrap-558bc52/docs/assets/css/bootstrap.css">
 	<link type="text/css" rel="stylesheet"
-		href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
+		href="./bootstrap/twitter-bootstrap-558bc52/docs/assets/css/bootstrap-responsive.css">
 	<script type="text/javascript"
-   		src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
+   		src="./bootstrap/twitter-bootstrap-558bc52/docs/assets/js/bootstrap.js"></script>
 </head>
 
 <body>
